# avro-piper

./: .gitignore  ChangeLog.md  README.md  avro-piper.cabal  package.yaml  run.sh  stack.yaml  test.json
.circleci/: config.yml
app/: Main.hs  Options.hs
scripts/: publish  release  up
src/: Error.hs  Format.hs
src/Conduit/: Splitter.hs
test/: SplitterSpec.hs
