cabal-version:  2.4
name:           avro-piper
version:        1.0.1
category:       Tools
description:    Please see the README on Github at <https://github.com/haskell-works/avro-piper#readme>
synopsis:       A tool to decode Avro messages from Kafka
homepage:       https://github.com/haskell-works/avro-piper#readme
bug-reports:    https://github.com/haskell-works/avro-piper/issues
author:         Alexey Raga
maintainer:     alexey.raga@gmail.com
copyright:      Alexey Raga
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/avro-piper

library
  hs-source-dirs:
      src
  build-depends:
      base                  >= 4.7      && < 5
    , aeson
    , avro                  >= 0.4.5.4  && < 0.5
    , bytestring
    , conduit
    , conduit-combinators
    , conduit-extra
    , hw-kafka-avro         >= 4.0.1    && < 5
    , mtl
    , optparse-applicative
    , scientific
    , stringsearch
    , text
    , unordered-containers
  exposed-modules:
      Conduit.Splitter
      Error
      Format
  other-modules:
  default-language: Haskell2010

executable avro-decode
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >= 4.7      && < 5
    , aeson
    , avro                  >= 0.4.5.4  && < 0.5
    , avro-piper
    , bytestring
    , conduit
    , conduit-combinators
    , conduit-extra
    , hw-kafka-avro         >= 4.0.1    && < 5
    , mtl
    , optparse-applicative
    , scientific
    , stringsearch
    , text
    , unordered-containers
  other-modules:
      Options
  default-language: Haskell2010

test-suite avro-piper-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base                  >= 4.7      && < 5
    , avro-piper
    , bytestring
    , conduit
    , conduit-combinators
    , conduit-extra
    , hedgehog
    , hspec
    , hw-hspec-hedgehog
    , mtl
    , optparse-applicative
    , scientific
    , stringsearch
    , text
    , unordered-containers
  other-modules:
      SplitterSpec
  default-language: Haskell2010
